@@ -2,7 +2,7 @@ Source: readsb
 Section: net
 Priority: optional
 Maintainer: Michael Wolf <michael@mictronics.de>
-Build-Depends: debhelper(>=9), libusb-1.0-0-dev, pkg-config, dh-systemd, libncurses5-dev, librrd-dev, libprotobuf-c-dev, protobuf-c-compiler
+Build-Depends: debhelper(>=9), libusb-1.0-0-dev, pkg-config, dh-systemd, libncurses5-dev, librrd-dev, libprotobuf-c-dev (>= 3.6), protobuf-c-compiler (>= 1.3)
 Standards-Version: 4.4.0.1
 Homepage: https://github.com/mictronics/readsb
 Vcs-Git: https://github.com/mictronics/readsb.git
